--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.4"
   },
-  "scripts": {},
+  "scripts": {
+    "build": "./node_modules/.bin/webpack",
+    "dev": "./node_modules/.bin/webpack-dev-server"
+  },
   "author": "",
   "license": "ISC"
 }
